--- a/assets/src/parts/_header.scss
+++ b/assets/src/parts/_header.scss
@@ -1,12 +1,13 @@
 .hero {
 	width: 100%;
 	// height: 100vh; 
-	padding: rem(50) rem(70) rem(46) 0; 
+	padding: rem(50) 0 rem(46) 0; 
 	@include bg('../img/hero.jpg'); 
 	&__flex-col {
 		@include align-items(center);
 	}
 	&__nav {
+		padding-right: rem(70); 
 		width: 100%;
 		@extend .flex-row;
 		@include justify-content(space-between);
